# agent-lifecycle-kit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  opencode.json  pyproject.toml  skills.sh.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  matrix.yml  neutrality.yml  release.yml
adapters/claude/: README.md  adapter.descriptor.json
adapters/codex/: README.md  adapter.descriptor.json
adapters/cursor/: README.md  adapter.descriptor.json
adapters/hermes/: README.md  adapter.descriptor.json  hermes.registry.json  slash-commands.json
adapters/opencode/: README.md  adapter.descriptor.json  opencode.json
conformance/: fixtures.index.json
conformance/core/: adapter-baseline.v1.json  budget-targets.v1.json  live-calibration-profile.v1.json  scenario-taxonomy.v1.json
docs/: README.md
docs/adapters/: claude.md  codex.md  cursor.md  hermes.md  opencode.md  support-matrix.md
docs/architecture/: modular-controller.md  release-architecture.md
docs/guides/: README.ru.md  release-candidate.md
docs/reference/: live-cost-calibration.md  model-routing.md  production-promotion.md
docs/security/: neutrality-contract.md  release-security.md
evals/synthetic/: cost-baseline.v1.json  replay-plan.v1.json
policy/: neutrality.policy.json
profiles/: model-routing-profile.v1.json  small-context-profile.v1.json
release/: README.md
(+284 files in other folders)
